--- a/test/index.html
+++ b/test/index.html
@@ -33,8 +33,7 @@
 
         // jQuery.noConflict();
 
-        console.log($("h1").siblings());
-        console.log($("h1").siblings("p"));
+        console.log($("#id-div-2 span").prev("p"));
 
         // $("div").on("click", "h1", function(){
         //     alert("ku");
