--- a/test/index.html
+++ b/test/index.html
@@ -27,6 +27,11 @@
         </div>
     </div>
 
+    <form>
+        <label>USERNAME</label>
+        <input type="text" name="username" value="123">
+    </form>
+
     <!--<script src="//code.jquery.com/jquery-3.3.1.min.js"></script>-->
     <script src="../src/mquery.js"></script>
     <script>
@@ -35,7 +40,9 @@
 
         // console.log($("#id-div-2 span").prev("p"));
 
-        console.log($("h1").closest("#id-div-2"));
+        // console.log($("h1").closest("#id-div-2"));
+
+        console.log($("h1").val(123));
 
         // $("div").on("click", "h1", function(){
         //     alert("ku");
