upd constructor for useing with html

--- a/test/index.html
+++ b/test/index.html
@@ -38,14 +38,17 @@
 
         jQuery.noConflict();
 
-        var html = "<div>\n" +
-            "<h1>Title</h1>\n" +
-            "<hr/>\n" +
-            "<p>Lorem ipsum</p>\n" +
-            "</div>";
+        // var html = "<div>\n" +
+        //     "<h1>Title</h1>\n" +
+        //     "<hr/>\n" +
+        //     "<p>Lorem ipsum</p>\n" +
+        //     "</div>";
 
         // console.log(jQuery(html));
-        console.log($.parseHTML(html));
+        // console.log($(html));
+        // console.log($("html"));
+        // console.log($.parseHTML(html));
+        // console.log($.parseHTML("html > div"));
 
         // console.log(/^<([a-z][^\/\0>:\x20\t\r\n\f]*)[\x20\t\r\n\f]*\/?>(?:<\/\1>|)$/i.exec(html));
 
