--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,7 @@
     </form>
 
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="../src/mquery.js"></script>
+    <script src="../build/m4q.js"></script>
     <script>
 
         // var html = "<div>\n" +
