add height, width

--- a/test/index.html
+++ b/test/index.html
@@ -43,7 +43,9 @@
         //     "</div>";
 
         // console.log($M(html));
-        console.log($M("html"));
+        console.log($M("body"));
+        console.log($M("body").height());
+        console.log($M("body").width());
         // console.log($M.parseHTML(html));
         // console.log($M.parseHTML("html > div"));
 
