improved horizontal search: next, prev

--- a/test/index.html
+++ b/test/index.html
@@ -42,10 +42,13 @@
         //     "<p>Lorem ipsum</p>\n" +
         //     "</div>";
 
+        console.log($M(".wrap span").prev());
+        console.log($M(".wrap span").next());
+
         // console.log($M(html));
-        console.log($M("body"));
-        console.log($M("body").height());
-        console.log($M("body").width());
+        // console.log($M("body"));
+        // console.log($M("body").height());
+        // console.log($M("body").width());
         // console.log($M.parseHTML(html));
         // console.log($M.parseHTML("html > div"));
 
