add type function

--- a/test/index.html
+++ b/test/index.html
@@ -36,8 +36,8 @@
     <script src="../build/m4q.js"></script>
     <script>
 
-        $M("#id-div").clearClasses();
-        $M("#id-div").addClass("class-div-add");
+        // $M("#id-div").clearClasses();
+        // $M("#id-div").addClass("class-div-add");
 
         // var html = "<div>\n" +
         //     "<h1>Title</h1>\n" +
@@ -82,12 +82,14 @@
         // })
 
 
-        // var o = {
-        //     key1: "val1",
-        //     key2: "val2",
-        //     key3: "val3",
-        //     key4: "val4"
-        // };
+        var o = {
+            key1: "val1",
+            key2: "val2",
+            key3: "val3",
+            key4: "val4"
+        };
+
+        console.log($M.type(function(){}));
 
         // $.each($M("span"), function(el, i){
         //     console.log(i, this);
