--- a/test/temp.html
+++ b/test/temp.html
@@ -7,8 +7,7 @@
 <body>
     <script src="../build/m4q.js"></script>
     <script>
-        console.log($.isPlainObject(document.body));
-        console.log($.isPlainObject({}));
+        console.log($("<div>") instanceof $);
     </script>
 </body>
 </html>
