--- a/test/temp.html
+++ b/test/temp.html
@@ -7,7 +7,9 @@
 <body>
     <script src="../build/m4q.js"></script>
     <script>
-        console.log($("<div>") instanceof $);
+        document.body.setAttribute("data-toggle-test", "test-value");
+        console.log($("body").attr("data-toggle-test"));
+        console.log($("body").toggleAttr("data-toggle-test").attr("data-toggle-test"));
     </script>
 </body>
 </html>
