--- a/test/qunit.html
+++ b/test/qunit.html
@@ -13,5 +13,6 @@
 <script src="qunit/qunit-2.8.0.js"></script>
 <script src="unit/core.js"></script>
 <script src="unit/attributes.js"></script>
+<script src="unit/proxy.js"></script>
 </body>
 </html>
