--- a/test/qunit.html
+++ b/test/qunit.html
@@ -14,5 +14,6 @@
 <script src="unit/core.js"></script>
 <script src="unit/attributes.js"></script>
 <script src="unit/proxy.js"></script>
+<script src="unit/size.js"></script>
 </body>
 </html>
