--- a/test/temp.html
+++ b/test/temp.html
@@ -13,8 +13,7 @@
 
     <script src="../build/m4q.js"></script>
     <script>
-        $("div").outerHeight(300);
-        $("div").outerWidth(300);
+        console.log($.camelCase("data-camel-case"));
     </script>
 </body>
 </html>
