--- a/test/qunit.html
+++ b/test/qunit.html
@@ -15,5 +15,6 @@
 <script src="unit/attributes.js"></script>
 <script src="unit/proxy.js"></script>
 <script src="unit/size.js"></script>
+<script src="unit/func.js"></script>
 </body>
 </html>
