--- a/test/qunit.html
+++ b/test/qunit.html
@@ -16,5 +16,6 @@
 <script src="unit/proxy.js"></script>
 <script src="unit/size.js"></script>
 <script src="unit/func.js"></script>
+<script src="unit/data.js"></script>
 </body>
 </html>
