--- a/test/temp.html
+++ b/test/temp.html
@@ -13,7 +13,7 @@
 
     <script src="../build/m4q.js"></script>
     <script>
-        console.log($.camelCase("data-camel-case"));
+        console.log($.dataSet('custom'));
     </script>
 </body>
 </html>
