add tests for constructor for complex html string

--- a/test/temp.html
+++ b/test/temp.html
@@ -23,9 +23,7 @@
     <script>
         jQuery.noConflict();
 
-        console.log("+++", $( "<div>" ));
-        console.log($( "<div>" ) instanceof m4q);
-        console.log($( "<div>" ) instanceof jQuery);
+        console.log($("<div></div><div></div><div></div>"));
     </script>
 </body>
 </html>
