add tests for constructor with m4q argument

--- a/test/temp.html
+++ b/test/temp.html
@@ -23,7 +23,8 @@
     <script>
         jQuery.noConflict();
 
-        console.log($("<div></div><div></div><div></div>"));
+        var div = $("<div></div><div></div><div></div>");
+        console.log($(div));
     </script>
 </body>
 </html>
