--- a/test/temp.html
+++ b/test/temp.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Title</title>
+    <style>
+        label {
+            display: flex;
+        }
+    </style>
 </head>
 <body>
     <h1 class="cls-title" id="h1">Title</h1>
@@ -12,7 +17,7 @@
         <span>span</span>
     </div>
     <div id="data-attr" data-attr="val">div with data attributes</div>
-    <form>
+    <form style="display: flex">
         <label>Label</label>
         <input id="input1" value="123">
         <input id="input2" value="123">
@@ -23,10 +28,12 @@
     <script>
         jQuery.noConflict();
 
-        $("label").attr({
-            id: "label-id",
-            class: "cls-1 cls-2"
-        })
+        console.log(!!document.getElementsByTagName('form')[0].style.display);
+
+        $("form").hide();
+        setTimeout(function(){
+            $("form").show();
+        }, 3000);
     </script>
 </body>
 </html>
